--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minitype",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Essential, extensible Javascript types",
   "engines": {
     "node": "14"
@@ -38,9 +38,10 @@
   },
   "homepage": "https://github.com/kevin-leptons/minitype#readme",
   "devDependencies": {
-    "docdash": "^1.2.0",
-    "http-server": "^14.1.0",
-    "jsdoc": "^3.6.7",
-    "mocha": "^9.1.4"
+    "docdash": "1.2.0",
+    "http-server": "14.1.0",
+    "jsdoc": "3.6.7",
+    "mocha": "9.1.4",
+    "palmito": "0.4.0"
   }
 }
